# Bank-Term-Deposit-Subscription-Prediction

./: README.md  config.yml  data.dvc  dockerfile  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.dvc/: config
steps/: ingest.py
